--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!--================ HOME ================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <img src="/asset/home.png" alt="homepage" class="home__img">
+                    <img src="asset/home.png" alt="homepage" class="home__img">
 
                     <div class="home__data">
                         <h1 class="home__title">
@@ -182,7 +182,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/asset/product1.png" alt="" class="product__img">
+                        <img src="asset/product1.png" alt="" class="product__img">
                         <h3 class="product__title">Cacti Plant</h3>
                         <span class="product__price">$19.99</span>
 
@@ -194,7 +194,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/asset/product2.png" alt="" class="product__img">
+                        <img src="asset/product2.png" alt="" class="product__img">
                         <h3 class="product__title">Cactus Plant</h3>
                         <span class="product__price">$11.99</span>
 
@@ -206,7 +206,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/asset/product3.png" alt="" class="product__img">
+                        <img src="asset/product3.png" alt="" class="product__img">
                         <h3 class="product__title">Aloe Vera Plant</h3>
                         <span class="product__price">$7.99</span>
 
@@ -218,7 +218,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/asset/product4.png" alt="" class="product__img">
+                        <img src="asset/product4.png" alt="" class="product__img">
                         <h3 class="product__title">Succulent Plant</h3>
                         <span class="product__price">$5.99</span>
 
@@ -230,7 +230,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/asset/product5.png" alt="" class="product__img">
+                        <img src="asset/product5.png" alt="" class="product__img">
                         <h3 class="product__title">Succulent Plant</h3>
                         <span class="product__price">$10.99</span>
 
@@ -242,7 +242,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/asset/product6.png" alt="" class="product__img">
+                        <img src="asset/product6.png" alt="" class="product__img">
                         <h3 class="product__title">Green Plant</h3>
                         <span class="product__price">$8.99</span>
 
