--- a/index.html
+++ b/index.html
@@ -493,11 +493,11 @@
 
 
         <!--================ SCROL REVEAL ================-->
-        <script src="/js/scrollreveal.min.js"></script>
+        <script src="js/scrollreveal.min.js"></script>
 
 
         <!--================ MAIN JS ================-->
-        <script src="/js/index.js"></script>
+        <script src="js/index.js"></script>
 
     </body>
 </html>
