--- a/index.html
+++ b/index.html
@@ -475,10 +475,10 @@
                     </h3>
                     
                     <div class="footer__cards">
-                        <img src="/asset/card1.png" alt="" class="footer__card">
-                        <img src="/asset/card2.png" alt="" class="footer__card">
-                        <img src="/asset/card3.png" alt="" class="footer__card">
-                        <img src="/asset/card4.png" alt="" class="footer__card">
+                        <img src="asset/card1.png" alt="" class="footer__card">
+                        <img src="asset/card2.png" alt="" class="footer__card">
+                        <img src="asset/card4.png" alt="" class="footer__card">
+                        <img src="asset/card3.png" alt="" class="footer__card">
                     </div>
                 </div>
             </div>
