--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
-        <title>Document</title>
+        <title>Plantex</title>
     </head>
     <body>
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <i class="ri-server-line nav__logo-icon"></i> IT-budget
+                    <i class="ri-server-line nav__logo-icon"></i> Plantex
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -422,7 +422,7 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <i class="ri-server-line nav__logo-icon"></i> IT-budget
+                        <i class="ri-server-line nav__logo-icon"></i> Plantex
                     </a>
 
                     <h3 class="footer__title">
